# tele-rest-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: AcceptedGiftTypes.md  AddStickerToSetRequest.md  AddStickerToSetResponse.md  AffiliateInfo.md  Animation.md  AnswerCallbackQueryPostRequest.md  AnswerCallbackQueryRequest.md  AnswerCallbackQueryResponse.md  AnswerInlineQueryPostRequest.md  AnswerInlineQueryRequest.md  AnswerInlineQueryResponse.md  AnswerPreCheckoutQueryPostRequest.md  AnswerPreCheckoutQueryRequest.md  AnswerPreCheckoutQueryResponse.md  AnswerShippingQueryPostRequest.md  AnswerShippingQueryRequest.md  AnswerShippingQueryResponse.md  AnswerWebAppQueryPost200Response.md  AnswerWebAppQueryPostRequest.md  AnswerWebAppQueryRequest.md  AnswerWebAppQueryResponse.md  ApproveChatJoinRequestPostRequest.md  ApproveChatJoinRequestRequest.md  ApproveChatJoinRequestResponse.md  Audio.md  BackgroundFill.md  BackgroundFillFreeformGradient.md  BackgroundFillGradient.md  BackgroundFillSolid.md  BackgroundType.md  BackgroundTypeChatTheme.md  BackgroundTypeFill.md  BackgroundTypePattern.md  BackgroundTypeWallpaper.md  BanChatMemberPostRequest.md  BanChatMemberPostRequestChatId.md  BanChatMemberRequest.md  BanChatMemberRequestChatId.md  BanChatMemberResponse.md  BanChatSenderChatPostRequest.md  (+869 more)
src/apis/: configuration.rs  default_api.rs  mod.rs
src/models/: _answer_callback_query_post_request.rs  _answer_inline_query_post_request.rs  _answer_pre_checkout_query_post_request.rs  _answer_shipping_query_post_request.rs  _answer_web_app_query_post_200_response.rs  (+908 more)
