[package]
name = "tele_rest"
version = "9.0.0"
authors = ["gitctrlx@gmail.com"]
description = "The Bot API is an HTTP-based interface created for developers keen on building bots for Telegram. To learn how to create and set up a bot, please consult our Introduction to Bots and Bot FAQ."
license = "Apache-2.0"
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.13", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
async-trait = "^0.1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"], optional = true }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
middleware = ["reqwest-middleware"]